
2020-01-28  Ron Norman <rjn@inglenet.com>
	* fileio.c,fbdb.c,fsqlxfd.c: Adding casts to avoid C compile warnings
	* fextfh.c,screenio.c,common.c: Adding casts to avoid C compile warnings

2020-01-25  Ron Norman <rjn@inglenet.com>
	* fileio.c: Skips reading records having SUPPRESS WHEN "string"
	            and checks for duplicates on (RE)WRITE if there was
				no WITH DUPLICATES because the underlying file 
				needs to allow DUPLICATES

2020-01-24  Ron Norman <rjn@inglenet.com>
	* Makefile.am: --version-info changed to 5:0:0
	* common.h: cob_file and cob_file_key updated
				some #define replaced by enum
				COB_FILE_VERSION is now 5
	* common.c: Changes to match updated cob_file_key
	* fileio.c: New routines added for setup of cob_file and cob_file_key
				Now skips records having SUPPRESS WHEN "string"
				Several place holders added and code will come later
	* fextfh.c: Changes to match updated cob_file
	* flmdb.c: Changes to match updated cob_file

2020-01-22  Ron Norman <rjn@inglenet.com>
	* coblocal.h: Added cob_bdb_byteorder
	* common.h: Added flags for BDB Byteorder
	* common.c: Added bdb_byteorder to runtime config processing
	* fileio.c: Added code to handle byteorder options
	* fbdb.c: Added code to use byteorder options for both BDB set_lorder
				and for the numeric duplicate key value

2020-01-06  Ron Norman <rjn@inglenet.com>
	* fileio.h,fsqlxfd.c,foci.c,fodbc.c:
			Implemented READ locking options (RETRY, IGNORE, ADVANCING)
			By adding clauses to SELECT statement
			What is used varies depending on the type of Database

2020-01-06  Ron Norman <rjn@inglenet.com>
	* fileio.c: In IO_filename checks for table=sqltablename
				and schema=directory holding XFD/DDL files 

	* common.h,fsqlxfd.c,foci.c,fodbc.c:
			Updates for using SELECT ... FOR UPDATE when needed

2020-01-03  Ron Norman <rjn@inglenet.com>

	* common.c: 	Moved close of DEBUG_LOG file after exit_fileio
	* common.h: 	Add COB_CLOSE_ABORT